# seidr

./: .gitignore  ARCHITECTURE.org  CHANGELOG.md  CODE_Of_CONDUCT.md  Cargo.toml  README.md  README.org  cliff.toml  flake.nix  install  install_debug  shell.nix  treefmt.nix
.github/workflows/: unit-tests.yml
benches/: basic_bench.rs
doc/: ARCHITECTURE.org  roadmap.org
src/: cli.rs  git.rs  lib.rs  lib.rs.old  main.rs  settings.rs  utils.rs
src/test/: config.yaml  test.yaml
src/utils/: dir.rs  strings.rs
tests/: main.rs
