[package]
name = "gg"
version = "0.0.2"
edition = "2021"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
repository = "https://github.com/cafkafk/gg"
license = "GPL-3.0-only"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0.22", features = ["derive"] }
log = "0.4"
#env_logger = "0.9"
pretty_env_logger = "0.4"

[build-dependencies]
clap = { version = "4.3.2", features = ["derive", "cargo", "env", "help"] }
clap_mangen = "0.2.4"

[profile.dev]
strip = false
#opt-level = 3
#lto = true
#codegen-units = 1

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1
