[package]
name = "seidr"
version = "0.2.0"
authors = ["Christina Sørensen"]
edition = "2021"
rust-version = "1.69.0"
description = "A Rust GitOps/symlinkfarm orchestrator inspired by GNU Stow."
documentation = "https://github.com/cafkafk/seidr"
readme = "./README.org"
homepage = "https://github.com/cafkafk/seidr"
repository = "https://github.com/cafkafk/seidr"
license = "GPL-3.0-only"
keywords = ["git", "declarative", "cli", "devops", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]
# workspace = "idk, I have no idea how to use this"
# build = "build.rs"
# links = "git2"
# exclude = "./vacation_photos"
# include = "./seidr_memes"
# publish = false
# metadata
# deafult-run
# autobins
# autoexamples
# autotests
# autobenches
# resolver

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0.22", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5.0"
relative-path = "1.8.0"
spinners = "4.1.0"

[build-dependencies]
clap = { version = "4.3.2", features = ["derive", "cargo", "env", "help"] }
clap_mangen = "0.2.4"

[profile.dev]
strip = false
#opt-level = 3
#lto = true
#codegen-units = 1

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "basic_bench" # I'm just a basic bench, nothing fancy :p
harness = false
